<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.markets.MarketsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/albx_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/markets_page"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28dp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:padding="8dp"
                    android:src="@drawable/turkey" />

                <Button
                    android:id="@+id/turkish"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:gravity="bottom"
                    android:text="@string/market1"></Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:padding="8dp"
                    android:src="@drawable/america" />

                <Button
                    android:id="@+id/american"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:gravity="bottom"
                    android:text="@string/market2"></Button>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/title1"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="-16dp"></TextView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/lilac"
                android:text="@string/market_btn1"
                android:textColor="@color/purple"></Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/lilac"
                android:text="@string/market_btn2"
                android:textColor="@color/purple"></Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/lilac"
                android:text="@string/market_btn1"
                android:textColor="@color/purple"></Button>
        </LinearLayout>


    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="389dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/card_view"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>